# Concordia

./: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
.github/workflows/: deploy.yml
app/: index.tsx
app/server/settings/: channels.tsx  general.tsx  main.tsx
app/settings/: UI.tsx  settings.tsx
components/: AutoTextInput.tsx  ChannelList.tsx  ChatWindow.tsx  ServerList.tsx  SideBar.tsx  UserCard.tsx
components/inputs/: StyledButton.tsx
components/settings/: returnArrow.tsx
constants/: Colors.ts
electron/: LocalServer.json  main.js
electron/handlers/: settings.js
handlers/: createChannel.tsx  deleteChannel.tsx  profilePicture.tsx  storage.tsx
scripts/: compile.bat
src/: app.css  app.html
src-tauri/: Cargo.toml  key.pem  key.pub  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/components/: modal.svelte  store.svelte.ts
src/components/chat/: CreatePoll.svelte  attachment.svelte  chatWindow.svelte  message.svelte  messageBox.svelte  messageList.svelte
src/lib/: apiRequest.ts  autostart.ts  cache.ts  debounce.ts  deepLink.ts  emoji.ts  formater.ts  getCamera.ts  getServerStatus.ts  history.ts  identityManagement.ts  levenshteinDistance.ts  localData.ts  loginRSA.ts  loginViaRsa.ts  logoutFromServer.ts  markdown.ts  tray.ts  updater.svelte.ts  validators.ts  webSockets.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/types/: LocalData.ts  Message.ts  RsaIdentity.ts  ServerStatus.ts
types/: role.ts  server.ts  user.ts
(+51 files in other folders)
